[tool.poetry]
name = "alpha2"
version = "0.1.0"
description = ""
authors = ["Lucas Parisi <l.parisi@efg.gg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
ipykernel = "^6.29.5"
jax = "^0.4.35"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
